plugins {
        id 'java'
        id 'org.springframework.boot' version '3.3.2'
        id 'io.spring.dependency-management' version '1.1.6'

}

group = 'com.example'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    google()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.0'

    implementation 'org.springframework.boot:spring-boot-starter-security:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.3.0'

    // Database
    runtimeOnly 'org.postgresql:postgresql:42.7.3'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Password Hashing
    implementation 'org.springframework.security:spring-security-crypto:6.3.0'

    // JSON Processing
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2' // For Java 8 Date & Time API

    // Lombok (for boilerplate reduction)
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.3.0'
    testImplementation 'org.springframework.security:spring-security-test:6.3.0'
}

tasks.named('test') {
    useJUnitPlatform()
}


